--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "homepage": "https://nidhisinha0702.github.io/my-portfolio",
+  "homepage": "https://nidhisinha0702.github.io/Portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
